# Code-Architect

./: .gitignore  README.md
.github/workflows/: backend-ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/tests/: test_main.py
