[project]
name = "codearchitect-backend"
version = "0.1.0"
description = "Backend API and AI orchestration service for the CodeArchitect platform."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["app", "tests"]
exclude = [".venv"]
